# data_vizualization

./: .gitignore  Cargo.toml
src/: Exporatory Data Analysis (EDA) in Rust using Polars and Plotly.ipynb
