[package]
name = "data_vizualization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotly = "0.8.4"
polars = {version = "0.35.4"}
itertools = "0.12.0"
rand_distr = "0.4.3"
prettytable-rs = "0.10.0"